gui/scss/core/_bootstrap-overrides.scss
/* ... */
.nav-tabs .nav-link {
    color: #c5c5c5;
}

.nav>li>a:focus, .nav>li>a:hover {
    text-decoration: none;
    background-color: transparent;
}

.nav-tabs>li>a:hover {
    border-color: transparent;
    border-bottom: 1px solid #e4e4e4;
}

.nav-tabs .nav-link:hover {
    color: #e4e4e4;
}

// Buttons

.btn {
    &.btn-lg {
        height: 42px;
        font-size: 15px;
    }
}

.btn-danger:hover,
.btn-default:hover,
.btn-primary:hover,
.btn-secondary:hover,
.btn-success:hover {
    border-color: transparent;
}

.btn-primary {
    background-color: #16809c;
    border-color: transparent;
    &:hover {
        background-color: #1f849e;
    }
}

.btn-default {
    border: 2px solid $default-btn-border;
    background-color: $default-btn-bg-color;
    color: $default-btn-text-color;
    &:hover {
        background-color: $default-btn-hover-bg;
        border-color: $default-btn-hover-border;
        color: $default-btn-text-color;
    }
}

.btn-default.active.focus, .btn-default.active:focus, .btn-default.active:hover, .btn-default:active.focus, .btn-default:active:focus, .btn-default:active:hover, .open>.dropdown-toggle.btn-default.focus, .open>.dropdown-toggle.btn-default:focus, .open>.dropdown-toggle.btn-default:hover {
    color: $default-btn-text-color;
    background-color: $default-btn-hover-bg;
    border-color: $default-btn-hover-border;
}

.btn.active.focus, .btn.active:focus, .btn.focus, .btn:active.focus, .btn:active:focus, .btn:focus {
    outline: 5px auto lightgray;
    outline-offset: -2px;
}

.btn.active, .btn:active {
    box-shadow: none;
}

.btn-danger, .btn-primary, .btn-success, .btn-secondary {
    padding: 7px 12px;
}

.btn-default.active, .btn-default:active, .open>.dropdown-toggle.btn-default {
    color: $default-btn-text-color;
    background-color: $default-btn-hover-bg;
    border-color: transparent;
}

.dropdown-toggle > .caret {
    margin-left: 5px;
}

.btn.active.focus, .btn.active:focus, .btn.focus, .btn:active.focus, .btn:active:focus, .btn:focus {
    outline: none;
    outline-offset: 0;
    border-color: transparent;
}

.btn-link {
    color: #12d0ff;
}

// Misc

.table-hover > tbody > tr:hover {
    background-color: $light-background-color;
}
.control-list:hover>td, .command-list:hover>td {
    color: $content-text-color;
}

.popover {
    border: 2px solid $dropdown-menu-border;
    background-color: $dropdown-menu-bg;
    border-radius: 2px;
    box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.35);
}

.popover.top > .arrow {
    border-top-color: transparent;
    &:after {
        border-top-color: $dropdown-menu-border;
    }
}

.popover.bottom > .arrow {
    border-bottom-color: transparent;
    &:after {
        border-bottom-color: $dropdown-menu-border;
    }
}

.popover.right > .arrow {
    border-right-color: transparent;
    &:after {
        border-right-color: $dropdown-menu-border;
    }
}

.popover.left > .arrow {
    border-left-color: transparent;
    &:after {
        border-left-color: $dropdown-menu-border;
    }
}

.popover-content {
    padding: 2px;
    word-wrap: break-word;
}

.tooltip-inner {
    word-wrap: break-word;
}

.dropdown-menu {
    border-radius: 2px;
    border: 2px solid $dropdown-menu-border;
    background-color: $dropdown-menu-bg;
    z-index: 2080;

    &:not(.effect-overflow-menu) {
        min-width: 125px;
    }
}

.dropdown-menu>li>a {
    color: $dropdown-menu-text;
    &:focus, &:hover {
        color: $dropdown-menu-text;
        background-color: adjust-color($dropdown-menu-bg, $red: -15, $green: -15, $blue: -15);
    }
}

.dropdown-menu .divider {
    background-color: $dropdown-menu-divider-color;
}

.text-muted {
    color: $muted-text-color;
}

.ui-select-bootstrap .ui-select-choices-row>span {
    color: $dropdown-menu-text;
}

.ui-select-bootstrap .ui-select-choices-row>span:hover, .ui-select-bootstrap .ui-select-choices-row>span:focus {
    text-decoration: none;
    color: $dropdown-menu-text;
    background-color: adjust-color($dropdown-menu-bg, $red: -15, $green: -15, $blue: -15);
}

.ui-select-bootstrap > .ui-select-choices, .ui-select-bootstrap > .ui-select-no-choice {
    max-height: 332px;
}

.control-type-list.ui-select-bootstrap .ui-select-choices-row > span {
    padding: 5px 0px;
    white-space: unset;
}


// Form Control
.input-group-addon {
    border: 2px solid $add-on-group-border;
    box-shadow: none;
    background-color: $add-on-group-bg;
    color: $add-on-group-text;
}

.form-control {
    border: 2px solid $form-control-border;
    height: 36px;
    box-shadow: none;
    background-color: $form-control-bg;
    color: $form-control-text;
    &:focus {
        box-shadow: none;
        background-color: adjust-color($form-control-bg, $red: -10, $green: -10, $blue: -10);
    }
    &.input-lg {
        height: 42px;
        font-size: 16px;
    }
}

.input-group .form-control {
    z-index: 0;
    float: none;
}

.form-group {
    margin-bottom: 30px;
    & .form-label {
        font-size: 15px;
        font-weight: 500;
        opacity: 0.9;
    }
    & .help-block {
        font-size: 13px;
        color: #9a9a9a;
    }
}

.has-error .form-control {
    &:focus {
        box-shadow: none;
    }
}

.color-picker-wrapper .input-group .input-group-addon {
    width: 40px;
    border: 1px solid #24262A !important;
    border-radius: 6px;
    &:first-child {
        border-top-right-radius: 0;
        border-bottom-right-radius: 0;
    }
}

.input-group .form-control:focus {
    z-index: 0;
}

.form-control[disabled], .form-control[readonly], fieldset[disabled] .form-control {
    background-color: adjust-color($form-control-bg, $red: 50, $green: 50, $blue: 50);
    opacity: 1;
}

label {
    font-size: 15px;
    font-weight: 400;
}

// Alerts

.alert {
    border-radius: 2px;
}

.alert-info {
    color: $alert-info-text-color;
    background-color: $alert-info-bg;
    border-color: transparent;
}
/* ... */

